--- a/html file/index.html
+++ b/html file/index.html
@@ -1,39 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap"
+      rel="stylesheet"
+    />
 
     <title>New-YEAR-NEW-MISSION</title>
-    <link rel="stylesheet" href="../style file/index.css">
-    <link rel="shortcut icon" href="../resources/New Year Photo.png" type="image/x-icon">
-</head>
-<body>
-
+    <link rel="stylesheet" href="../style file/index.css" />
+    <link
+      rel="shortcut icon"
+      href="../resources/New Year Photo.png"
+      type="image/x-icon"
+    />
+  </head>
+  <body>
     <!-- Header{start} -->
     <header>
-        <div class="header-new-year">
-            <h3 class="happy-new-year">Happy New Year</h3>
-            <h1 class="Celebration-Party">New Year Party Celebration</h1>
+      <div class="header-new-year">
+        <h3 class="happy-new-year">Happy New Year</h3>
+        <h1 class="Celebration-Party">New Year Party Celebration</h1>
+      </div>
+      <!-- off-65 -->
+      <div class="off-65">
+        <h1 class="off-65-h1">65% OFF</h1>
+        <h4 class="our-holiday">OUR HOLIDAY DEALS ARE BETTER</h4>
+        <h2 class="all-categories">ALL CATEGORIES</h2>
+        <img
+          class="new-year-photo"
+          src="../resources/New Year Photo.png"
+          alt="#"
+        />
+      </div>
 
+      <div class="victorrrr">
+        <!-- pore korbo............................. -->
+      </div>
+      <div class="new-park-hotel">
+        <p class="place"><samp>Place:</samp>New Park Hotel</p>
+        <p class="place"><samp>Date:</samp>31 December Night 2023</p>
+        <p class="place"><samp>Time:</samp>Evening 7.30 pm to 12.30 am</p>
+        <button class="btn">Join Now</button>
+      </div>
+
+      <div class="new-best-offer">
+        <div class="Coming-Soon">
+          <h4>NEW BEST OFFER</h4>
+          <h2>Coming Soon</h2>
+          <p class="primari-text-size">
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
         </div>
-
+        <div>
+            <img src="../resources/Ellipse 1.png" alt="">
+        </div>
+        <div class="2024">
+          <h2>2024</h2>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.
+          </p>
+          <img src="../resources/Group 96.png" alt="">
+        </div>
+      </div>
     </header>
 
     <!-- Main ar kaj start -->
-    <main>
-
-    </main>
+    <main></main>
 
     <!-- Footer Ending part -->
-    <footer>
-
-    </footer>
-    
-</body>
+    <footer></footer>
+  </body>
 </html>
